--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ documentation = "https://docs.rs/tegra_swizzle"
 repository = "https://github.com/ScanMountGoat/tegra_swizzle"
 edition = "2018"
 
+[lib]
+crate-type = ["cdylib"]
+
 [dependencies]
 arbitrary = { version = "1", features = ["derive"], optional = true }
 
